--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
 
     <!-- - - - - - - - - - - QUOTE - - - - - - - - - - - - - - - - -->
     <section class="grid quote">
-      <span class="right col-2 quote-mark">"</span>
-      <p class="col-8 quote">I've never experienced sleep like this. Omg I really love this mattress I want to buy one for every member of my family and one for my dog too.</p>
-      <span class="left col-2 quote-mark">"</span>
-      <p class="col-12 author">- A very happy customer</p>
+      <div class="col-2 right">
+        <span class="quote-mark">"</span>
+      </div>
+      <div class="col-8 quote">
+        <p>I've never experienced sleep like this. Omg I really love this mattress I want to buy one for every member of my family and one for my dog too.</p>
+      </div>
+      <div class="left col-2">
+        <span class="quote-mark">"</span>
+      </div>
+      <div class="col-12 author">
+        <p>- A very happy customer</p>
+      </div>
     </section>
 
     <!-- - - - - - - - - - FOOTER - - - - - - - - - - - - - - -->
