--- a/index.html
+++ b/index.html
@@ -59,17 +59,30 @@
     </section>
 
     <!-- - - - - - - - - - FOOTER - - - - - - - - - - - - - - -->
-    <footer class="grid dark">
+    <footer class="grid-spaceBetween dark">
       <div class="left col-5">
       <h2>let's</h2>
       <h3>connect</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-    </footer>
+
 
     <!-- - - - - - - - - - - FORM - - - - - - - - - -->
-    <form>
-    </form>
+  <form method="POST" class="col-5" action="http://formspree.io/ashleygaver92@gmail.com">
+      <input type="name" name="name" id="name" placeholder="Your Name"></br>
+  	 <input type="email" name="email" id="name" placeholder="Your Email"></br>
+  	 <textarea name="message" id="message" placeholder="Tell us what you want to say..."></textarea>
+    <label for="firm">What firmness do you prefer?</label></br>
+      <select name="firm">
+        <option value="" selected disabled hidden>Choose here</option>
+        <option value="Soft">Soft</option>
+        <option value="Medium">Medium</option>
+        <option value="Hard">Hard</option>
+      </select></br>
+ <input class="button" type="submit">
+</form>
+</footer>
+
 
   </body>
 
