--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- - - - - - - - EXTERNAL STYLE SHEET - - - - - - - - - - -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.6.1/gridlex.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- - - - - - - - - - FONTS - - - - - - - - - -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
@@ -24,16 +25,18 @@
 
 <!-- - - - - - - - - - - - GRID - - - - - - - - - - - -->
     <section class="grid">
-      <div class="bg-pug col-6"></div>
-      <div class="padded col-6">
+      <div class="bg-pug col-6_sm-12"></div>
+      <div class="padded col-6_sm-12">
         <h2>built to last a <span>lifetime</span></h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <div class="padded col-6">
+    </section>
+    <section class="grid mob-reverse">
+      <div class="padded col-6_sm-12">
         <h2>so <span>soft</span> you'll melt</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <div class="bg-mattress col-6"></div>
+      <div class="bg-mattress col-6_sm-12"></div>
     </section>
 
     <!-- - - - - - - - - - SMALL BANNER - - - - - - - - - - - - - -->
@@ -60,7 +63,7 @@
 
     <!-- - - - - - - - - - FOOTER - - - - - - - - - - - - - - -->
     <footer class="grid-spaceBetween dark">
-      <div class="left col-5">
+      <div class="left col-5_sm-12">
       <h2>let's</h2>
       <h3>connect</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -68,22 +71,12 @@
 
 
     <!-- - - - - - - - - - - FORM - - - - - - - - - -->
-  <form method="POST" class="col-5" action="http://formspree.io/ashleygaver92@gmail.com">
-      <input type="name" name="name" id="name" placeholder="Your Name"></br>
-  	 <input type="email" name="email" id="name" placeholder="Your Email"></br>
-  	 <textarea name="message" id="message" placeholder="Tell us what you want to say..."></textarea>
-    <label for="firm">What firmness do you prefer?</label></br>
-      <select name="firm">
-        <option value="" selected disabled hidden>Choose here</option>
-        <option value="Soft">Soft</option>
-        <option value="Medium">Medium</option>
-        <option value="Hard">Hard</option>
-      </select></br>
- <input class="button" type="submit">
-</form>
-</footer>
-
-
+      <form method="POST" class="col-5_sm-12" action="http://formspree.io/ashleygaver92@gmail.com">
+        <input type="name" name="name" id="name" placeholder="Your Name"></br>
+  	     <input type="email" name="email" id="name" placeholder="Your Email"></br>
+  	      <textarea name="message" id="message" placeholder="Tell us what you want to say..."></textarea>
+        <input class="button" type="submit">
+      </form>
+    </footer>
   </body>
-
   </html>
