--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- - - - - - - - - - FONTS - - - - - - - - - -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon" rel="stylesheet">
 
     <!-- - - - - - - - - - CSS - - - - - - - - - - - -->
     <link rel="stylesheet" href="style.css">
@@ -48,7 +49,7 @@
     <!-- - - - - - - - - - - QUOTE - - - - - - - - - - - - - - - - -->
     <section class="grid quote">
       <div class="col-2 right">
-        <span class="quote-mark">"</span>
+        <span class="quote-mark">&#8220;</span>
       </div>
       <div class="col-8 quote">
         <p>I've never experienced sleep like this. Omg I really love this mattress I want to buy one for every member of my family and one for my dog too.</p>
@@ -71,7 +72,7 @@
 
 
     <!-- - - - - - - - - - - FORM - - - - - - - - - -->
-      <form method="POST" class="col-5_sm-12" action="http://formspree.io/ashleygaver92@gmail.com">
+      <form method="POST" class="col-5_sm-8" action="http://formspree.io/ashleygaver92@gmail.com">
         <input type="name" name="name" id="name" placeholder="Your Name"></br>
   	     <input type="email" name="email" id="name" placeholder="Your Email"></br>
   	      <textarea name="message" id="message" placeholder="Tell us what you want to say..."></textarea>
